--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="robots" content="index,follow"/>
+  <meta property="og:description"
+  content="Ismael Miah is a software engineer who builds accessible,
+  inclusive products and digital experiences for the web." />
+  <meta property="og:image" content="%PUBLIC_URL%/images/Thumbnail.jpeg" />
+  <meta property="og:image:type" content="image/jpeg"/>
+  <meta property="og:image:alt" content="Summary Image"/>
+  <meta property="og:title" content="Ismael Miah" />
+  <meta property="og:type" content="website"/>
+  <meta property="og:locale" content="en_IE"/>
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <link rel="favicon-16x16" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+  <link rel="favicon-32x32" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+  <link rel="android-chrome-192x192" sizes="192x192" href="%PUBLIC_URL%/favicon/android-chrome-192x192.png">
+  <link rel="android-chrome-512x512" sizes="512x512" href="%PUBLIC_URL%/favicon/android-chrome-512x512.png">
+  <!-- Add more link tags for other favicon variations -->
+
+  <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -36,7 +64,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>My - Portfolio</title>
+  <title>Ismael Miah</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
